// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography should render h1 tag 1`] = `
<h1
  className="sc-1hvrgbn-0 csixHB"
  color="normal"
  fontWeight="normal"
  type="h1"
>
  Example of Typography component
</h1>
`;

exports[`Typography should render p tag 1`] = `
<p
  className="sc-1hvrgbn-4 hzedTQ"
  color="normal"
  fontWeight="normal"
  type="paragraph"
>
  Example of Typography component
</p>
`;
